src/app/agenda-evento-text/agenda-evento-text.component.css
.agenda-text {
    display: flex;
    justify-content: center;
    padding: 10px;
    border: 1px solid #ccc;
    border-radius: 5px;
    background-color: #f9f9f9;
    color: #333;
    font-size: 24px;
    line-height: 1.5;
    text-align: justify;
}

.evento-text {
    display: flex;
    justify-content: center;
}

